Fix slider alignment

--- a/assets/css/module.css
+++ b/assets/css/module.css
@@ -1,13 +1,13 @@
 @CHARSET "UTF-8";
 
 .field_key {
-	margin-left: 205px;
+	margin-left: 203px;
 }
 
 input.widgetSlider {
-	width: 345px;
+	width: 350px;
 }
 
 input.widgetSlider#Element_OphOuAnaestheticsatisfactionaudit_Satisfaction_nausea {
-	width: 116px;
+	width: 120px;
 }
